@@ -30,7 +30,7 @@
 #include <math.h>
 
 #ifndef PI
-#define PI 3.14159265
+#define PI 3.141592654
 #endif
 
 
